2011-01-20  Michael Saboff  <msaboff@apple.com>

        Reviewed by Oliver Hunt.

        <rdar://problem/8890203> [RegexFuzz] Crash in generated code (52773)
        https://bugs.webkit.org/show_bug.cgi?id=52773

        Fixed case where an existing DataLabelPtr is overwritten.  The
        replacing DataLabelPtr is now resolved immediately in
        linkDataLabelToBacktrackIfExists().  Cleanup - eliminated bool
        return value for the routine as it was never used.

        * yarr/YarrJIT.cpp:
        (JSC::Yarr::YarrGenerator::TermGenerationState::linkDataLabelToBacktrackIfExists):

2011-01-20  Andras Becsi  <abecsi@webkit.org>

        Reviewed by Csaba Osztrogonác.

        [Qt][WK2] WebKit2 enabled build fails to link

        Work around undefined reference linking issues until the buildsystem gets redesigned.
        These issues first occured in minimal builds (see BUG 50519).

        * JavaScriptCore.pri: link as whole-archive for WebKit2 builds

2011-01-20  Zoltan Horvath  <zoltan@webkit.org>

        Reviewed by Csaba Osztrogonác.

        Refactoring of the custom allocation framework
        https://bugs.webkit.org/show_bug.cgi?id=49897

        Inheriting from FastAllocBase can result in objects getting larger (bug #33896, #46589).
        The modification replaces Noncopyable and FastAllocBase classes and these inherits with their
        equivalent macro implementation at the necessary places.

        * wtf/FastAllocBase.h: Turn FastAllocBase's implementation into a macro.

2011-01-20  Mark Rowe  <mrowe@apple.com>

        Reviewed by Maciej Stachowiak.

        Follow-up to r75766 / <rdar://problem/5469576>.

        We were failing to initialize the key, causing all sorts of unexpected behavior.

        * wtf/FastMalloc.cpp:
        (WTF::setThreadHeap):
        (WTF::TCMalloc_ThreadCache::GetThreadHeap):
        (WTF::TCMalloc_ThreadCache::InitTSD): Ensure that the key is initialized.

2011-01-18  Geoffrey Garen  <ggaren@apple.com>
